--- a/styles.css
+++ b/styles.css
@@ -1,307 +1,423 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
 
-
-@property --angle {
-    syntax: '<angle>';
-    initial-value: 0deg;
-    inherits: false;
+:root{
+  --main-color: #11101d;
+  --color-dark: #1D2231;
+  --text-grey:  #8390A2;
 }
 
-
-.spiral {
-  display: flex;
-  justify-content: center; /* Zarovná děti na střed vodorovně */
-  align-items: flex-start; /* Zarovná děti na začátek svisle */
-  gap: 5px;
-  position: absolute;
-  top: 20px; /* Umístí kontejner 20 pixelů od horní hranice */
-  left: 50%; /* Umístí levý okraj kontejneru na střed obrazovky */
-  transform: translateX(-50%); /* Posune kontejner zpět o polovinu jeho šířky, aby byl centrován */
-  color: #e0ecef;
-  font-family: Bahnschrift;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: 'Poppins' ,sans-serif;
 }
 
-@keyframes spiral{
-  0%{
-    --angle: 0deg;
-  }
-  100%{
-    --angle: 360deg;
-  }
+.sidebar{
+  width: 345px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  z-index: 100; 
+  background: var(--main-color);
+  transition: width 300ms;
+
 }
-
-.character{
-  font-size: 2.8rem;
-  color: white;
-  text-transform: uppercase;
-  transform: translateY(calc(sin(var(--angle)) * 10px)) scale(calc(cos(var(--angle)) * 0.5 + 0.5));
-  animation: spiral 4s linear infinite;
+.sidebar-brand{
+  height: 90px;
+  padding: 1rem 0rem 1rem 2rem;
+  color: #fff;
 }
-
-@media (max-width: 600px) { /* Pokryje většinu malých až středně velkých zařízení */
-  .spiral {
-    font-size: 2rem; /* Menší velikost písma pro lepší čitelnost */
-  }
-
-  .character {
-    font-size: 1.6rem; /* Menší velikost písma pro jednotlivé znaky */
-    transform: translateY(calc(sin(var(--angle)) * 5px)) scale(calc(cos(var(--angle)) * 0.5 + 0.7));
-  }
+.sidebar-brand span{
+  display: inline-block;
+  padding-right: 1rem;
 }
-body {
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-    color: #ffffff;
-    background: linear-gradient(to bottom, #000000 50%, #1a1a1a 100%); /* Gradient z černé na zelenou */
-    width: 100%;
-    height: 100%;
-    font-family: monospace;
-    overflow-x: hidden; /* Zabrání horizontálnímu scrollování */
+.sidebar-menu li{
+  width: 100%;
+  margin-bottom: 1.7rem;
+  padding-left: 1rem;
+
 }
-
-
-header {
-
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+.sidebar-menu{
+  margin-top: 1rem;
 }
+.sidebar-menu a{
+  padding-left: 2rem;
+  display: block;
+  color: #fff;
+  font-size: 1.1rem;
+}
+#nav-toggle:checked + .sidebar {
+  width: 70px ;
 
-
-ul { 
-  margin: 0px auto 0; 
-  padding: 0; 
-  list-style: none; 
-  display: table;
-  width: 600px;
+}
+#nav-toggle:checked + .sidebar .sidebar-brand,
+#nav-toggle:checked + .sidebar li 
+{
+  padding-left: 1rem;
   text-align: center;
 }
-li { 
-  display: table-cell; 
-  position: relative; 
-  padding: 15px 0;
+#nav-toggle:checked + .sidebar li a
+{
+  padding-left: 0rem;
 }
-a {
-  color: #fff;
-  text-transform: uppercase;
-  text-decoration: none;
-  letter-spacing: 0.15em;
-  
-  display: inline-block;
-  padding: 15px 20px;
-  position: relative;
+#nav-toggle:checked + .sidebar .sidebar-brand h1 span:last-child,
+#nav-toggle:checked + .sidebar li a span:last-child{
+  display: none;
+
 }
-a:after {    
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 2px;
-  left: 50%;
-  position: absolute;
+.sidebar-menu a span:first-child{
+  font-size: 1.5rem;
+  padding-right: 1rem;
+}
+.sidebar-menu a.active{
   background: #fff;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  color: var(--main-color);
+  border-radius: 30px 0px 0px 30px;
+
 }
-a:hover:after { 
-  width: 100%; 
-  left: 0; 
+#nav-toggle:checked ~ .main-content {
+  margin-left: 70px;
+
 }
-@media screen and (max-height: 300px) {
-	ul {
-		margin-top: 40px;
-	}
+#nav-toggle:checked ~ .main-content  header{
+  width: calc(100% - 70px);
+  left:70px;
+
 }
-
-
-
-
-.button {
-    font-family: 'Bahnschrift', sans-serif; /* Nastaví font-family na Bahnschrift pro všechny prvky s třídou 'button' */
+.main-content{
+  transition: margin-left 300ms;
+  margin-left: 345px;
 }
+header{
+  background: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  left: 345px;
+  top:0;
+  z-index: 100; 
+  width: calc(100% - 345px);
+  transition: left 300ms;
+  }
 
-/* Zajistí, že nadřazený element neumožňuje horizontální scrollování */
-body, html {
-    width: 100%;
-    overflow-x: hidden; /* Zabrání horizontálnímu scrollování */
-    max-width: 100%; /* Zamezí přetečení obsahu */
+#nav-toggle{
+  display: none;
 }
-
-header nav {
-    width: 100%; /* Nastavení šířky navigace na 100% */
-    box-sizing: border-box; /* Započítávání paddingu a borderu do šířky */
+header h2{
+  color: #222;
 }
-
-header nav ul {
-    width: 100%; /* Nastavení šířky seznamu na 100% */
-    display: flex; /* Flexbox pro lepší uspořádání položek */
-    justify-content: center; /* Centrování položek */
-    padding: 0; /* Odstranění paddingu */
-    margin: 0 auto; /* Centrování seznamu a odstranění marginu */
-    list-style: none; /* Odstranění odrážek */
-    flex-wrap: wrap; /* Položky půjdou na nový řádek, pokud není dost místa */
+header label span{
+  font-size: 1.7rem;
+  padding-right: 1rem;
 }
-
-header nav ul li a, .button {
-    color: #fff;
-    text-decoration: none;
-    background: #0f0f0f;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-    padding: 15px 20px; /* Větší padding pro lepší klikatelnost */
-    box-sizing: border-box; /* Započítávání paddingu a borderu do šířky */
-
-    display: block;  /* Zajistí, že odkaz zabere celou plochu tlačítka */
+.search-wrapper {
+  border: solid 1px #ccc;
+  border-radius: 30px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  overflow-x: hidden;
 }
-
-/* Responzivní nastavení pro malá zařízení */
-@media (max-width: 768px) {
-    header nav ul li {
-        width: 100%; /* Každá položka zabere celou šířku */
-    }
-
-    header nav ul li a, .button {
-        width: 100%; /* Nastavení šířky tlačítka na 100% */
-        text-align: center; /* Centrování textu */
-    }
+.search-wrapper span{
+  display: inline-block;
+  padding: 0rem 1rem;
+  font-size: 1.5rem;
 }
+.search-wrapper input{
+  height: 100%;
+  padding: .5rem;
+  border: none;
+  outline: none;
 
-
-@keyframes float {
-    0% {
-        transform: translateY(0px);
-    }
-
-    50% {
-        transform: translateY(-20px);
-    }
-
-    100% {
-        transform: translateY(0px);
-    }
+}
+.user-wrapper{
+  display: flex;
+  align-items: center;
+}
+.user-wrapper img{
+  border-radius: 50%;
+  margin-right: .5rem;
 }
 
+.user-wrapper small{
+  display: inline-block;
+  color: var(--text-grey);
+  margin-top: -1px !important;
 
+}
+main{
+  margin-top: 85px;
+  padding: 2rem 1.5rem;
+  background: #f1f5f9;
+  min-height: calc(100vh - 90px);
+}
+.cards{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+  margin-top: 1rem;
+  
+  
+  
+}
+.card-single{
+  display: flex;
+  justify-content: space-between;
+  background: #fff;
+  padding: 2rem;
+  border-radius: 12px;
+   box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
+}
+.card-single div:last-child span{
+  color: var(--main-color);
+  font-size: 3rem;
 
+}
+.card-single div:first-child span{
+  color: var(--text-grey);
+  
 
-
-section {
-    padding: 20px;
-    margin: 0 10px;
-    background: #0f0f0f;
-    border: 1px solid #ddd;
+}
+.card-single:last-child{
+  background: var(--main-color);
+}
+.card-single:last-child h1,
+.card-single:last-child div:first-child span,
+.card-single:last-child div:last-child span
+{
+  color: #fff;
 }
 
+.recent-grid{
+  margin-top: 3.5rem;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: 65% auto;
+ 
+}
+.card{
+  background: #fff;
+  border-radius: 12px;
+   box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
+  padding: 1rem;
+}
+.card-header
+{
+  padding: 1rem;
+}
+.card-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #f0f0f0;
+}
+.card-header button{
+  background: var(--main-color);
+  border-radius: 10px;
+  color: #fff;
+  font-size: .8rem;
+  padding: .5rem 1rem;
+  border:1px solid var(--main-color);
+}
+table{
+  border-collapse: collapse;
+}
+thead tr{
+  border-top: 1px solid #f0f0f0;
+  border-bottom:2px solid #f0f0f0;
 
-footer {
+}
+thead td{
+  font-weight: 700;
+}
+td{
+  padding: .5rem 1rem ;
+  font-size: .9rem ;
+  color: #222;
+  
+}
+
+tr td:last-child{
+  display: flex;
+  align-items: center;
+
+
+}
+td .status{
+  display: inline-block;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  margin-right: 1rem; 
+}
+.status.purple {
+  background: rebeccapurple;
+}
+.status.pink{
+  background: deeppink;
+}
+.status.orange{
+  background: orangered;
+}
+.table-responsive{
+  width: 100%;
+  overflow-x: auto;
+}
+.customer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem .7rem;
+}
+.info{
+  display: flex;
+  align-items: center;
+}
+.info img{
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+.info h4{
+  font-size: .8rem;
+  font-weight: 700;
+  color: #222;
+}
+.info small{
+  font-weight: 600;
+  color: var(--text-grey);
+}
+.contact span{
+  font-size: 1.2rem;
+  display: inline-block;
+  margin-left: .5rem;
+  color:  var(--main-color);
+
+}
+
+@media only screen and (max-width: 1200px){
+
+  .sidebar{
+    width: 70px ;
+  }
+  .sidebar .sidebar-brand,
+  .sidebar li 
+  {
+    padding-left: 1rem;
     text-align: center;
-    padding: 10px 0;
-    background: #0f0f0f;
-    color: #fff;
+  }
+  #nav-toggle:checked + .sidebar li a
+  {
+    padding-left: 0rem;
+  }
+  .sidebar .sidebar-brand h1 span:last-child,
+  .sidebar li a span:last-child{
+    display: none;
+
+  }
+  
+  .main-content {
+  margin-left: 70px;
+
+  }
+  .main-content  header{
+    width: calc(100% - 70px);
+    left:70px;
+
+  }
 }
 
-
-
-table {
-    width: 100%;
-    border-collapse: collapse;
+@media only screen and (max-width: 960px){
+  .cards{
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .recent-grid{
+    grid-template-columns: 60% 40%;
+  }
 }
 
-th, td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-
-thead {
-    background-color: gray;
-}
-
-tbody tr:nth-child(even) {
-    background-color: #4d91ff;
-}
-
-tbody tr:nth-child(odd) {
-    background-color: #0062ff;
-    color: white;
-}
-
-tbody tr:hover {
-    background-color: #FFA07A;
-}
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Space%20Grotesk:700|Space%20Grotesk:400');
-
-:root {
-    /*  change this for scaling  */
-    --m: 2rem;
-    --red: #FF6565;
-    --pink: #FF64F9;
-    --purple: #6B5FFF;
-    --blue: #4D8AFF;
-    --green: #5BFF89;
-    --yellow: #FFEE55;
-    --orange: #FF6D1B;
-}
-
-
-button1 {
-    font-family: Bahnschrift;
-}
-
-    button2 {
-    border: calc(0.08 * var(--m)) solid transparent;
-    position: relative;
-    color: #F3F3F3;
-    max-width: 200px; /* Maximální šířka tlačítka */
-    width: 100%; /* Šířka se přizpůsobí obsahu do maxima uvedeného výše */
-    left: 50%; /* Umístí levý okraj kontejneru na střed obrazovky */
-    transform: translateX(-50%); /* Posune kontejner zpět o polovinu jeho šířky, aby byl centrován */
-    font-family: Bahnschrift;
-    font-size: var(--m);
-    border-radius: calc(0.7 * var(--m));
-    padding: calc(0.5 * var(--m)) calc(1 * var(--m));
+@media only screen and (max-width: 768px){
+  .cards{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .recent-grid{
+    grid-template-columns: 100%;
+  }
+  .search-wrapper{
+    display: none;
+  }
+  .sidebar {
+    
+    left: -100% !important;
+  }
+  header h2{
     display: flex;
-    justify-content: center;
-    cursor: pointer;
-    background: linear-gradient(#121213, #121213), linear-gradient(#121213 50%, rgba(18, 18, 19, 0.6) 80%, rgba(18, 18, 19, 0)), linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
-    background-origin: border-box;
-    background-clip: padding-box, border-box, border-box;
-    background-size: 200%;
-    animation: animate 2s infinite linear;
+    align-items: center;
+  }
+  header h2 label{
+    display: inline-block;
+    text-align: center;
+    background: var(--main-color);
+    padding-right: 0rem;
+    margin-right: 1rem;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+  }
+  header h2 span{
+    text-align: center;
+    padding-right: 0rem;
+  }
+  header h2{
+    font-size: 1.1rem;
+  }
+  .main-content{
+    width: 100%;
+    margin-left: 0rem;
+  }
+  header{
+    width: 100% !important;
+    left: 0 !important;
+  }
+  #nav-toggle:checked + .sidebar{
+    left: 0 !important;
+    z-index: 100;
+    width: 345px;
+  }
+  
+  #nav-toggle:checked .sidebar .sidebar-brand,
+  #nav-toggle:checked + .sidebar li 
+  {
+    padding-left: 2rem;
+    text-align: left;
+  }
+
+  #nav-toggle:checked + .sidebar li a
+  {
+    padding-left: 1rem;
+  }
+  #nav-toggle:checked  + .sidebar .sidebar-brand h1 span:last-child,
+  #nav-toggle:checked + .sidebar li a span:last-child{
+    display: inline;
+
+  }
+  #nav-toggle:checked ~ .main-content{
+    margin-left: 0rem !important;
+  }
 }
-
-    button2::before {
-        content: '';
-        background: linear-gradient(90deg, var(--orange), var(--yellow), var(--green), var(--blue), var(--purple), var(--pink), var(--red));
-        height: 30%;
-        width: 60%;
-        position: absolute;
-        bottom: -20%;
-        z-index: -5;
-        background-size: 200%;
-        animation: animate 2s infinite linear;
-        filter: blur(calc(0.8 * var(--m)));
-    }
-
-    button2:hover, button2:hover::before {
-        animation: animate 0.5s infinite linear;
-    }
-
-@keyframes animate {
-    0% {
-        background-position: 0
-    }
-
-    100% {
-        background-position: 200%
-    }
-}
-
-@media screen and (max-width: 1000px) {
-    :root {
-        --m: 2rem;
-    }
+@media only screen and (max-width: 560px){
+  .cards{
+    grid-template-columns: 100%;
+  }
 }
