--- a/style.css
+++ b/style.css
@@ -65,10 +65,10 @@
   padding-left: 0rem;
 }
 #nav-toggle:checked + .sidebar .sidebar-brand h1 span:last-child,
-#nav-toggle:checked + .sidebar li a span:last-child{
-  display: none;
-
+#nav-toggle:checked + .sidebar li a span:last-child {
+  display: inline; /* Místo 'none' zvolte 'inline' */
 }
+
 .sidebar-menu a span:first-child{
   font-size: 1.5rem;
   padding-right: 1rem;
